# python-devkit

./: .gitignore  README.md  pyproject.toml  up.py
python_devkit/: healthchecks.py  production.py  services.py
python_devkit/dev/: healthchecks.py  services.py  write_files.py
python_devkit/healthchecks/: __init__.py  hc_minio.py  hc_mongodb.py  hc_redis.py
python_devkit/templates/: production.Dockerfile  start.sh  stop.sh  uwsgi.ini  wait.py
