[tool.poetry]
name = "python-devkit"
version = "0.0.1"
description = ""
authors = ["KTachibanaM <whj19931115@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.1.1"
redis = "^4.3.3"
requests = "^2.28.0"
PyYAML = "^6.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
